      boolean attributes and reserved word attributes.
    * Fixed a double-decode problem in History.

* Additions to Paginator package:
    * New FilmStrip class for handling a single row or column of
      variable-width elements.
    * Both Paginator and FilmStrip now implement a common core
      of functionality, encapsulated in the Paginatable module.


Version 0.4.2
June 14 2010
================================================================

* Additions to core:
    * URI#removeParam() method added to remove a parameter from
      a URI.

* Bug fixes:
    * Ojay.changeAlias now works in Internet Explorer.
    * ClearType is now reinstated when setting an element's
      opacity to 1.
    * JSONP callback generation/cleanup bug.
    * Tabs no longer animate when created.
    * Ojay.Forms.Select now respects disabled attributes on
      option elements.
    * Removing all the elements from a Paginator no longer
      throws errors.
    * Mix JS.State into Accordion so that it's no longer
      possible to open multiple panes at once.
    * Rewrite some of the Accordion internals to improve the
      separation of concerns.


Version 0.4.1
June 25 2009
================================================================

* Additions to core:
    * Upgrade to JS.Class 2.1. See http://jsclass.jcoglan.com
      for details.
    * All classes now have displayNames set up for debugging
      and profiling.

* Bug fixes:
    * The HTML used for Tabs toggles is now more accurately
      copied so, for example, images may be used as toggles.
    * Handling of concurrent JSONP requests is now more robust.


Version 0.4.0
April 29 2009
================================================================

* Additions to core:
    * Custom DOM events. DomCollection#on() treats event names
      containing colons as custom events, and a fire() method
      is provided for notifying observers.

* Bug fixes:
    * DomCollection#set() handles boolean attributes correctly