@@ -18,6 +18,9 @@
   %li
     %a#animated-fit{:href => '#'}
       Animated fitting
+  %li
+    %a#add-close-button{:href => '#'}
+      Add close button
 
 %button#mover Move the overlay
 %button#filler Fill with too much content and resize
